--- a/Qms_v3/templates/agent_dashboard.html
+++ b/Qms_v3/templates/agent_dashboard.html
@@ -107,7 +107,7 @@
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">All Fatal Audits</h2>
                     <h1>{{overall_fatal_audit_count}}</h1>
-                    <a href="/emp-report/fatal" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/emp-report/all-fatal" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -152,7 +152,7 @@
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">Open Audits</h2>
                     <h1>{{month_open_total}}</h1>
-                    <a href="/emp-report/open" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/emp-report/month-open" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -169,7 +169,7 @@
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">Dispute Audits</h2>
                     <h1>{{month_dispute_total}}</h1>
-                    <a href="/emp-report/dispute" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/emp-report/month-dispute" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
