--- a/Qms_v3/templates/qa_dashboard.html
+++ b/Qms_v3/templates/qa_dashboard.html
@@ -159,7 +159,7 @@
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">All Audits</h2>
                     <h1>{{all_total}}</h1>
-                    <a href="/emp-report/all" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/qa-reports/all" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -176,7 +176,7 @@
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">Open Audits</h2>
                     <h1>{{open_total}}</h1>
-                    <a href="/emp-report/open" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/qa-reports/open" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -193,7 +193,7 @@
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">Dispute Audits</h2>
                     <h1>{{dispute_total}}</h1>
-                    <a href="/emp-report/dispute" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/qa-reports/dispute" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -244,7 +244,7 @@
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">All Fatal Audits</h2>
                     <h1>{{overall_fatal_audit_count}}</h1>
-                    <a href="/emp-report/fatal" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/qa-reports/all-fatal" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -272,7 +272,7 @@
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">This Month's Audits</h2>
                     <h1>{{month_all_total}}</h1>
-                    <a href="/emp-report/month" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/qa-reports/month" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -289,7 +289,7 @@
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">Open Audits</h2>
                     <h1>{{month_open_total}}</h1>
-                    <a href="/emp-report/open" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/qa-reports/month-open" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -306,7 +306,7 @@
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">Dispute Audits</h2>
                     <h1>{{month_dispute_total}}</h1>
-                    <a href="/emp-report/dispute" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/qa-reports/month-dispute" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -357,7 +357,7 @@
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">This Month's Fatal Audits</h2>
                     <h1>{{fatal_total}}</h1>
-                    <a href="/emp-report/fatal" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/qa-reports/fatal" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -654,8 +654,6 @@
     $export_cam_end.attr("min",$export_cam_start)
     $export_cam_end.attr("required","required")
   }
-
-
 
 
 </script>
