--- a/Qms_v3/templates/individual_reports.html
+++ b/Qms_v3/templates/individual_reports.html
@@ -94,7 +94,7 @@
                           <h5>All Fatal Audits</h5>
                           <br>
                           <h1>{{overall_fatal_audit_count}}</h1>
-                          <a href="/agent-report/fatal/{{profile.emp_id}}" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                          <a href="/agent-report/all-fatal/{{profile.emp_id}}" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                             View
                           </a>
                         </div>
@@ -159,7 +159,7 @@
                           <h5>Open Audits</h5>
                           <br>
                           <h1>{{month_open_total}}</h1>
-                          <a href="/agent-report/open/{{profile.emp_id}}" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                          <a href="/agent-report/month-open/{{profile.emp_id}}" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                             View
                           </a>
                         </div>
@@ -171,7 +171,7 @@
                           <h5>Dispute Audits</h5>
                           <br>
                           <h1>{{month_dispute_total}}</h1>
-                          <a href="/agent-report/dispute/{{profile.emp_id}}" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                          <a href="/agent-report/month-dispute/{{profile.emp_id}}" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                             View
                           </a>
                         </div>
