--- a/Qms_v3/templates/manager_base.html
+++ b/Qms_v3/templates/manager_base.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	 <link rel="icon" href="{% static 'assets/images/expertcallers-icon.png' %}" type="image/ico" />
 
-    <title>ECPL Quality Managment System | Dashboard</title>
+    <title>ECPL Quality Management System | Dashboard</title>
 
     <!-- Bootstrap -->
     <link href="{% static 'assets/vendors/bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
