--- a/Qms_v3/templates/agent_reports.html
+++ b/Qms_v3/templates/agent_reports.html
@@ -49,7 +49,8 @@
                     </thead>
                     <tfoot>
                       <tr>
-                        <th>Audit Date</th>
+                        <th>Audit ID</th>
+                        <th>Employee Name</th>
                         <th>Employee Id</th>
                         <th>Audit Date</th>
                         <th>Campaign</th>
@@ -65,7 +66,8 @@
                     {% for j in audit %}
                       {% for i in j %}
                       <tr>
-                        <td>{{i.audit_date}}</td>
+                        <td>{{i.audit_id}}</td>
+                        <td>{{i.associate_name}}</td>
                         <td>{{i.emp_id}}</td>
                         <td>{{i.audit_date}}</td>
                         <td>{{i.campaign}}</td>
