--- a/Qms_v3/templates/agent_dashboard.html
+++ b/Qms_v3/templates/agent_dashboard.html
@@ -6,7 +6,7 @@
           <div class="row mb-3 pt-3 pb-3 border">
             <div class="col-md-12 pb-2">
               <h4>Overall:
-                    {% if overall_average ==  "No Audits This Month" %}
+                    {% if overall_average ==  "No Audits" %}
                     {{overall_average}}
                     {% else %}
                     {{overall_average|floatformat:2}}%
