--- a/Qms_v3/templates/manager_dashboard.html
+++ b/Qms_v3/templates/manager_dashboard.html
@@ -119,7 +119,7 @@
           <div class="row mb-3 pt-3 pb-3 border">
             <div class="col-md-12 pb-2 pt-2 mb-2 bg-white" >
               <h2 class="box-title" style="color: #2A3F54; font-weight: 600;">This Month's:
-                    {% if average ==  "No Audits This Month" %}
+                    {% if average ==  "No Audits" %}
                     {{average}}
                     {% else %}
                     {{average|floatformat:2}}%
