--- a/Qms_v3/templates/agent_reports.html
+++ b/Qms_v3/templates/agent_reports.html
@@ -36,6 +36,7 @@
                     <thead>
                       <tr>
                         <th>Audit Date</th>
+                        <th>Employee Name</th>
                         <th>Employee Id</th>
                         <th>Audit Date</th>
                         <th>Campaign</th>
