--- a/Qms_v3/templates/qa_reports.html
+++ b/Qms_v3/templates/qa_reports.html
@@ -40,6 +40,7 @@
                   <table  id="datatablex" class="table table-striped" style="width: 100%;">
                     <thead>
                       <tr>
+                        <th>Audit ID</th>
                         <th>Employee Name</th>
                         <th>Employee Id</th>
                         <th>Audit Date</th>
@@ -54,6 +55,7 @@
                     </thead>
                     <tfoot>
                       <tr>
+                        <th>Audit ID</th>
                         <th>Employee Name</th>
                         <th>Employee Id</th>
                         <th>Audit Date</th>
@@ -70,6 +72,7 @@
                     {% for j in audit %}
                       {% for i in j %}
                       <tr>
+                        <td>{{i.audit_id}}</td>
                         <td>{{i.associate_name}}</td>
                         <td>{{i.emp_id}}</td>
                         <td>{{i.audit_date}}</td>
