--- a/Qms_v3/templates/agent_reports.html
+++ b/Qms_v3/templates/agent_reports.html
@@ -35,7 +35,7 @@
                   <table  id="datatablex" class="table table-striped" style="width: 100%;">
                     <thead>
                       <tr>
-                        <th>Audit Date</th>
+                        <th>Audit ID</th>
                         <th>Employee Name</th>
                         <th>Employee Id</th>
                         <th>Audit Date</th>
