--- a/Qms_v3/templates/manager_dashboard.html
+++ b/Qms_v3/templates/manager_dashboard.html
@@ -496,6 +496,7 @@
               </div>
             </div>
           </div>
+          {% if request.user.profile.emp_desi != 'Team Leader' %}
           <div class="row pb-3">
             <div class="col-md-6">
               <div class="card">
@@ -542,6 +543,8 @@
                 </div>
               </div>
             </div>
+            {% endif %}
+            {% if request.user.profile.emp_desi != 'Team Leader' and if request.user.profile.emp_desi != 'Assistant Manager' %}
             <div class="col-md-6">
               <div class="card">
                 <div class="card-header">
@@ -587,6 +590,7 @@
                 </div>
               </div>
             </div>
+            {% endif %}
           </div>
 
 
