--- a/Qms_v3/templates/manager_dashboard.html
+++ b/Qms_v3/templates/manager_dashboard.html
@@ -544,7 +544,7 @@
               </div>
             </div>
             {% endif %}
-            {% if request.user.profile.emp_desi != 'Team Leader' and if request.user.profile.emp_desi != 'Assistant Manager' %}
+            {% if request.user.profile.emp_desi != 'Team Leader' and request.user.profile.emp_desi != 'Assistant Manager' %}
             <div class="col-md-6">
               <div class="card">
                 <div class="card-header">
