--- a/Qms_v3/templates/campaign_reports.html
+++ b/Qms_v3/templates/campaign_reports.html
@@ -62,7 +62,8 @@
                       </tr>
                     </tfoot>
                     <tbody>
-                    {% for i in audit %}
+                    {% for j in audit %}
+                      {% for i in j %}
                       <tr>
                         <td>{{i.associate_name}}</td>
                         <td>{{i.emp_id}}</td>
@@ -96,6 +97,7 @@
                           </form>
                         </td>
                       </tr>
+                      {% endfor %}
                     {% endfor %}
                     </tbody>
                   </table>
